[gd_scene load_steps=7 format=2]

[ext_resource path="res://GolfBall/GolfBall.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/Golf Ball/Golf Ball_3a1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Other/Golf Ball/Golf Ball_3a2.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 1.58557

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "moving_ball",
"speed": 15.0
} ]

[node name="GolfBall" type="RigidBody2D" groups=["golfball"]]
rotation = 1.5708
collision_layer = 137
collision_mask = 137
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
script = ExtResource( 2 )
wind_strength = 15

[node name="GolfballCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -1900
limit_top = -3264
limit_right = 1900
limit_bottom = 335

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="RisingTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="FallingTimer" type="Timer" parent="Timers"]

[node name="StoppedTimer" type="Timer" parent="Timers"]

[node name="ResultTimer" type="Timer" parent="Timers"]

[node name="Area2D" type="Area2D" parent="."]
rotation = -0.245691
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "moving_ball"

[node name="RisingTween" type="Tween" parent="AnimatedSprite"]

[connection signal="body_entered" from="." to="." method="_on_GolfBall_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
